[package]
name = "zeronbt"
version = "0.1.1"
edition = "2024"
description = "A no-std, minimal allocation, streaming NBT parser"
license = "MIT"

[[bench]]
name = "zeronbt"
harness = false

[profile.bench]
strip = false
debug = true

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
iai-callgrind = "0.14.0"
